# intermediate_python

./: .flake8  CLAUDE.md  MODULE_IMPROVEMENTS.md  README.md  generate_intermediate_python.py  pyproject.toml
module_00_python_refresh/: 01_data_types_and_variables.py  02_core_data_structures.py  README.md
module_00_python_refresh/notebooks/: 01_data_types_and_variables.ipynb  02_core_data_structures.ipynb
module_01_pythonic_foundations/: 01_data_model_and_unpacking.py  02_strings_collections_and_dates.py  README.md
module_01_pythonic_foundations/notebooks/: 01_data_model_and_unpacking.ipynb  02_strings_collections_and_dates.ipynb
module_02_control_flow_and_comprehensions/: 01_control_flow_patterns.py  02_comprehensions_and_generators.py  README.md
module_02_control_flow_and_comprehensions/notebooks/: 01_control_flow_patterns.ipynb  02_comprehensions_and_generators.ipynb
module_03_functions_and_functional_programming/: 01_function_design.py  02_higher_order_functions_and_decorators.py  README.md
module_03_functions_and_functional_programming/notebooks/: 01_function_design.ipynb  02_higher_order_functions_and_decorators.ipynb
module_04_files_serialization_and_paths/: 01_pathlib_and_text_files.py  02_csv_json_and_pickle.py  README.md
module_05_oop_and_errors/: 01_classes_dataclasses_and_dunder.py  02_exceptions_validation_and_custom_errors.py  README.md
module_06_packages_and_sqlite/: 01_packages_imports_and_cli.py  02_sqlite_for_python_projects.py  README.md
module_06_packages_and_sqlite/data/: library.db
tools/: build_notebooks.py  validate_course.py
(+49 files in other folders)
