[project]
name = "intermediate-python-course"
version = "0.1.0"
description = "Hands-on intermediate Python course with matching scripts, notebooks, and exercises."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
]

[dependency-groups]
dev = [
  "flake8>=7.1.0",
  "ruff>=0.6.9",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["**/notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"generate_intermediate_python.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".venv", "**/notebooks/*.ipynb"]
per-file-ignores = ["generate_intermediate_python.py:E501"]
